# mcp-server-itsm

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
db/: init.sql
src/mcp_server_itsm/: .env  rag.py  server.py
