# pyproject.toml  (放在仓库根目录)

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_server_itsm"
version = "0.1.0"
description = "Ivanti Tools Server for MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=44.0.3",
    "dashscope",
    "httpx>=0.28.1",
    "llama-index>=0.12.35",
    "mcp>=1.9.0",
    "fastmcp==2.5.1",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
]

# 告诉 setuptools 去哪找源码包
[tool.setuptools.packages.find]
where = ["src"]
